2006-03-25  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from David S. Miller <davem@davemloft.net>: Fix support for sparc/linux.

Mon Mar 20 18:56:21 CET 2006 Paolo Molaro <lupus@ximian.com>

	* include/gc.h: enable pthread redirection on darwin, too.
	* include/gc_pthread_redirects.h: completed from Bryan Berg.

Thu Feb 9 16:20:55 CET 2006 Paolo Molaro <lupus@ximian.com>

	* os_dep.c, include/private/gcconfig.h, darwin_stop_world.c:
	OSX/x86 support, mostly from Geoff Norton <gnorton@customerdna.com>.

Wed Feb 1 18:23:55 CET 2006 Paolo Molaro <lupus@ximian.com>

	* pthread_support.c, *: back out Zoltan's patch since it's
	incorrect.
	The correct fix it to execute the cleanup from inside
	the thread also when using the __thread var to access the
	current GC_thread.

2006-02-01  Zoltan Varga  <vargaz@gmail.com>

	* pthread_support.c (GC_thread_deregister_foreign): New public API
	function to deregister a foreign thread from the GC.
	(GC_destroy_thread_local): Clean up the TLS key too.
	
Tue Jan 24 12:34:06 CET 2006 Paolo Molaro <lupus@ximian.com>

	* *: update from upstream changes.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* include/Makefile.am: Don't install libgc-mono-debugger.h.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* include/libgc-mono-debugger.h: Call the conditional
	`_IN_THE_MONO_DEBUGGER', not `IN_MONO_DEBUGGER'.

2006-01-11  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Undef _FILE_OFFSET_BITS on sparc.

2006-01-03  Geoff Norton  <gnorton@customerdna.com>

	* darwin_stop_world.c:  Merge a patch from Bruce Mitchener that fixes a small
	leak on OS X.

2005-12-26  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Disable PROC_VDB on solaris/x86 as it
	doesn't seem to work.

2005-12-06  Todd Berman  <tberman@off.net>

	* pthread_support.c (GC_thread_register_foreign): Wrap a GC_printf1
	inside a #ifdef DEBUG_THREADS like the others. Based on a patch from